--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,40 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>DigitalCrafters</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 	
+<header>
+	<div class="header-wrap">
+		<div class="menu">
+			<li class="menu__item">
+				<a href="#" class="menu__link">ABOUT</a>
+				<a href="#" class="menu__link">TESTIMONIALS</a>
+				<a href="#" class="menu__link">SERVICES</a>
+				<a href="#" class="menu__link">PORTFOLIO</a>
+				<a href="#" class="menu__link">CONTACT</a>
+			</li>
+		</div>
+		<div class="logo">
+			<a href="#">DIGITAL CRAFTERS</a>
+		</div>
+		<div class="menu__button">
+			<a href="#" class="btn">REQUEST A QUOTE</a>
+		</div>
+	</div>
+</header>
+
+<section class="banner">
+	
+</section>
+
+
 </body>
 </html>
