Add some comments

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,10 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	
-<header>
+
+<header class="header">
 	<div class="header-wrap">
+        <!-- LI only in UL, not DIV -->
 		<div class="menu">
 			<li class="menu__item">
 				<a href="#" class="menu__link">ABOUT</a>
@@ -32,8 +33,34 @@
 	</div>
 </header>
 
+<!--<header class="header">-->
+    <!--<div class="nav">-->
+        <!--<ul class="nav-menu">-->
+            <!--<li class="nav-menu__item">-->
+                <!--<a href="#">ABOUT</a>-->
+            <!--</li>-->
+            <!--<li class="nav-menu__item">-->
+                <!--<a href="#">TESTIMONIALS</a>-->
+            <!--</li>-->
+            <!--<li class="nav-menu__item">-->
+                <!--<a href="#">SERVICES</a>-->
+            <!--</li>-->
+            <!--<li class="nav-menu__item">-->
+                <!--<a href="#">PORTFOLIO</a>-->
+            <!--</li>-->
+            <!--<li class="nav-menu__item">-->
+                <!--<a href="#">CONTACT</a>-->
+            <!--</li>-->
+        <!--</ul>-->
+        <!--<a class="nav-logo">-->
+            <!--<img src="" class="nav-logo__img" alt="DIGITAL CRAFTERS">-->
+        <!--</a>-->
+        <!--<div class="nav-btn">REQUEST A QUOTE</div>-->
+    <!--</div>-->
+<!--</header>-->
+
 <section class="banner">
-	
+
 </section>
 
 
