--- a/src/index.html
+++ b/src/index.html
@@ -12,52 +12,33 @@
 </head>
 <body>
 
-<header class="header">
-	<div class="header-wrap">
-        <!-- LI only in UL, not DIV -->
-		<div class="menu">
-			<li class="menu__item">
-				<a href="#" class="menu__link">ABOUT</a>
-				<a href="#" class="menu__link">TESTIMONIALS</a>
-				<a href="#" class="menu__link">SERVICES</a>
-				<a href="#" class="menu__link">PORTFOLIO</a>
-				<a href="#" class="menu__link">CONTACT</a>
-			</li>
-		</div>
-		<div class="logo">
-			<a href="#">DIGITAL CRAFTERS</a>
-		</div>
-		<div class="menu__button">
-			<a href="#" class="btn">REQUEST A QUOTE</a>
-		</div>
-	</div>
+<header class="header container.container-section1">
+    <div class="nav">
+        <ul class="nav-menu">
+            <li class="nav-menu__item">
+                <a class="nav-menu__link" href="#">ABOUT</a>
+            </li>
+            <li class="nav-menu__item">
+                <a class="nav-menu__link" href="#">TESTIMONIALS</a>
+            </li>
+            <li class="nav-menu__item">
+                <a class="nav-menu__link" href="#">SERVICES</a>
+            </li>
+            <li class="nav-menu__item">
+                <a class="nav-menu__link" href="#">PORTFOLIO</a>
+            </li>
+            <li class="nav-menu__item">
+                <a class="nav-menu__link" href="#">CONTACT</a>
+            </li>
+        </ul>
+        <div class="nav-logo">
+        	<a href="#"><img src="../img/logo.png" class="nav-logo__img" alt="">DIGITAL CRAFTERS</a>
+        </div>
+        <div class="nav-btn">
+        	<a href="#" class="btn">REQUEST A QUOTE</a>
+        </div>
+    </div>
 </header>
-
-<!--<header class="header">-->
-    <!--<div class="nav">-->
-        <!--<ul class="nav-menu">-->
-            <!--<li class="nav-menu__item">-->
-                <!--<a href="#">ABOUT</a>-->
-            <!--</li>-->
-            <!--<li class="nav-menu__item">-->
-                <!--<a href="#">TESTIMONIALS</a>-->
-            <!--</li>-->
-            <!--<li class="nav-menu__item">-->
-                <!--<a href="#">SERVICES</a>-->
-            <!--</li>-->
-            <!--<li class="nav-menu__item">-->
-                <!--<a href="#">PORTFOLIO</a>-->
-            <!--</li>-->
-            <!--<li class="nav-menu__item">-->
-                <!--<a href="#">CONTACT</a>-->
-            <!--</li>-->
-        <!--</ul>-->
-        <!--<a class="nav-logo">-->
-            <!--<img src="" class="nav-logo__img" alt="DIGITAL CRAFTERS">-->
-        <!--</a>-->
-        <!--<div class="nav-btn">REQUEST A QUOTE</div>-->
-    <!--</div>-->
-<!--</header>-->
 
 <section class="banner">
 
