--- a/src/index.html
+++ b/src/index.html
@@ -12,30 +12,35 @@
 </head>
 <body>
 
-<header class="header container.container-section1">
-    <div class="nav">
-        <ul class="nav-menu">
-            <li class="nav-menu__item">
-                <a class="nav-menu__link" href="#">ABOUT</a>
-            </li>
-            <li class="nav-menu__item">
-                <a class="nav-menu__link" href="#">TESTIMONIALS</a>
-            </li>
-            <li class="nav-menu__item">
-                <a class="nav-menu__link" href="#">SERVICES</a>
-            </li>
-            <li class="nav-menu__item">
-                <a class="nav-menu__link" href="#">PORTFOLIO</a>
-            </li>
-            <li class="nav-menu__item">
-                <a class="nav-menu__link" href="#">CONTACT</a>
-            </li>
-        </ul>
-        <div class="nav-logo">
-        	<a href="#"><img src="../img/logo.png" class="nav-logo__img" alt="">DIGITAL CRAFTERS</a>
-        </div>
-        <div class="nav-btn">
-        	<a href="#" class="btn">REQUEST A QUOTE</a>
+<header class="header">
+    <div class="container container--nav">
+        <div class="nav">
+            <ul class="nav-menu">
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#">ABOUT</a>
+                </li>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#">TESTIMONIALS</a>
+                </li>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#">SERVICES</a>
+                </li>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#">PORTFOLIO</a>
+                </li>
+                <li class="nav-menu__item">
+                    <a class="nav-menu__link" href="#">CONTACT</a>
+                </li>
+            </ul>
+            <div class="nav-logo">
+                <a class="nav-logo__link" href="#">
+                    <img src="../img/logo.png" class="nav-logo__img" alt="">
+                    DIGITAL CRAFTERS
+                </a>
+            </div>
+            <div class="nav-btn">
+                <a href="#" class="btn">REQUEST A QUOTE</a>
+            </div>
         </div>
     </div>
 </header>
