--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             </ul>
             <div class="nav-logo">
                 <a class="nav-logo__link" href="#">
-                    <img src="../img/logo.png" class="nav-logo__img" alt="">
+                    <img src="./img/logo.png" class="nav-logo__img" alt="">
                     DIGITAL CRAFTERS
                 </a>
             </div>
