header and banner done

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>DigitalCrafters</title>
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -39,14 +39,25 @@
                 </a>
             </div>
             <div class="nav-btn">
-                <a href="#" class="btn">REQUEST A QUOTE</a>
+                <a href="#" >REQUEST A QUOTE</a>
             </div>
-        </div>
+        </div>    
     </div>
+    <div class="container container--banner">
+		
+		<div class="banner">
+        	<p class="banner-head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
+			<h1 class="banner-info">We give you the stuff you need to make more money</h1>
+			<p class="banner-descr">Bring us your remarkable business. We’ll give you the design, content and tool you need to become unstoppable. 2018 is the year you become rich.</p>
+			<div class="btn">
+                <a href="#" class="btn-banner">Claim your free consultation</a>
+           </div>
+		</div>
+	</div>
 </header>
 
 <section class="banner">
-
+	
 </section>
 
 
