making section 'about'

--- a/src/index.html
+++ b/src/index.html
@@ -49,15 +49,23 @@
         	<p class="banner-head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
 			<h1 class="banner-info">We give you the stuff you need to make more money</h1>
 			<p class="banner-descr">Bring us your remarkable business. We’ll give you the design, content and tool you need to become unstoppable. 2018 is the year you become rich.</p>
-			<div class="btn">
-                <a href="#" class="btn-banner">Claim your free consultation</a>
-           </div>
+			<a href="#" class="btn btn-banner">Claim your free consultation</a>
+           
 		</div>
 	</div>
 </header>
 
-<section class="banner">
-	
+<section class="about">
+	<div class="container container--about">
+		<span class="about-preheading">HOW WE CAN HELP YOU</span>
+		<h2 class="about-heading">You come up with the usiness, we’ll build the website</h2>
+		<p class="about-text">Maybe you’ve hired someone in the past to create your website, only to find out they know everything about pretty fonts and nothing about designs that convert. Perhaps you’ve worked with a content creator who writes suspiciously like a robot.</p>
+		<img src="img/about-img.png" alt="#" class="about-img">
+		<p class="about-text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one can stop you now from working with us.</p>
+		<div class="btn">
+                <a href="#" class="btn btn-about">Claim your free consultation</a>
+           </div>
+	</div>
 </section>
 
 
