--- a/src/index.html
+++ b/src/index.html
@@ -1,72 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>DigitalCrafters</title>
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>DigitalCrafters</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
-<header class="header">
-    <div class="container container--nav">
-        <div class="nav">
-            <ul class="nav-menu">
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#">ABOUT</a>
-                </li>
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#">TESTIMONIALS</a>
-                </li>
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#">SERVICES</a>
-                </li>
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#">PORTFOLIO</a>
-                </li>
-                <li class="nav-menu__item">
-                    <a class="nav-menu__link" href="#">CONTACT</a>
-                </li>
-            </ul>
-            <div class="nav-logo">
-                <a class="nav-logo__link" href="#">
-                    <img src="./img/logo.png" class="nav-logo__img" alt="">
-                    DIGITAL CRAFTERS
-                </a>
+    <header class="header">
+        <div class="container container--nav">
+            <div class="nav">
+                <ul class="nav-menu">
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#">ABOUT</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#">TESTIMONIALS</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#">SERVICES</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-menu__item">
+                        <a class="nav-menu__link" href="#">CONTACT</a>
+                    </li>
+                </ul>
+                <!-- SVG + absolute -->
+                <div class="nav-logo">
+                    <a class="nav-logo__link" href="#">
+                        <img src="./img/logo.png" class="nav-logo__img" alt="">
+                        DIGITAL CRAFTERS
+                    </a>
+                </div>
+                <!-- BTN class -->
+                <div class="nav-btn">
+                    <a class="btn btn--nav" href="#">REQUEST A QUOTE</a>
+                </div>
             </div>
-            <div class="nav-btn">
-                <a href="#" >REQUEST A QUOTE</a>
+        </div>
+        <div class="container container--banner">
+            <div class="banner">
+                <p class="banner-head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
+                <h1 class="banner-info">We give you the stuff you need to make more money</h1>
+                <p class="banner-descr">Bring us your remarkable business. We’ll give you the design, content and tool
+                    you need to become unstoppable. 2018 is the year you become rich.</p>
+                <a href="#" class="btn btn--banner">Claim your free consultation</a>
             </div>
-        </div>    
-    </div>
-    <div class="container container--banner">
-		
-		<div class="banner">
-        	<p class="banner-head">GET THE FOOLPROOF STRATEGY THAT HELPS YOU WIN</p>
-			<h1 class="banner-info">We give you the stuff you need to make more money</h1>
-			<p class="banner-descr">Bring us your remarkable business. We’ll give you the design, content and tool you need to become unstoppable. 2018 is the year you become rich.</p>
-			<a href="#" class="btn btn-banner">Claim your free consultation</a>
-           
-		</div>
-	</div>
-</header>
+        </div>
+    </header>
 
-<section class="about">
-	<div class="container container--about">
-		<span class="about-preheading">HOW WE CAN HELP YOU</span>
-		<h2 class="about-heading">You come up with the usiness, we’ll build the website</h2>
-		<p class="about-text">Maybe you’ve hired someone in the past to create your website, only to find out they know everything about pretty fonts and nothing about designs that convert. Perhaps you’ve worked with a content creator who writes suspiciously like a robot.</p>
-		<img src="img/about-img.png" alt="#" class="about-img">
-		<p class="about-text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one can stop you now from working with us.</p>
-		<div class="btn">
-                <a href="#" class="btn btn-about">Claim your free consultation</a>
-           </div>
-	</div>
-</section>
+    <section class="about">
+        <div class="container container--about">
+            <h2 class="title title--texted">You come up with the usiness, we’ll build the website</h2>
+            <p class="text">Maybe you’ve hired someone in the past to create your website, only to find out they
+                know everything about pretty fonts and nothing about designs that convert. Perhaps you’ve worked with a
+                content creator who writes suspiciously like a robot.</p>
+            <img class="about__img" src="img/about-img.png" alt="#">
+            <p class="text">Or worse, you’ve heard horror stories about programmers, web designers and writers who
+                sprint out of the starting blocks… and then disappear entirely. Luckily, you found us, and no one can
+                stop you now from working with us.</p>
+            <div class="btn">
+                <a href="#" class="btn btn--about">Claim your free consultation</a>
+            </div>
+        </div>
+    </section>
 
 
 </body>
