making section about

--- a/src/index.html
+++ b/src/index.html
@@ -36,12 +36,11 @@
                 <div class="nav-logo">
                     <a class="nav-logo__link" href="#">
                         <img src="./img/logo.png" class="nav-logo__img" alt="">
-                        DIGITAL CRAFTERS
                     </a>
                 </div>
                 <!-- BTN class -->
                 <div class="nav-btn">
-                    <a class="btn btn--nav" href="#">REQUEST A QUOTE</a>
+                    <a class="btn--nav" href="#">REQUEST A QUOTE</a>
                 </div>
             </div>
         </div>
@@ -69,6 +68,20 @@
             <div class="btn">
                 <a href="#" class="btn btn--about">Claim your free consultation</a>
             </div>
+
+            <!-- <div class="about-slider"> -->
+            	<div class="quotes"><img src="img/quotes.png" alt=""></div>
+            	<div class="about__client">
+	            	<div class="about__client_info">
+	            		<img class="client_photo" src="img/client.jpg" alt="">
+	            		<p class="text">We have worked with Digital Crafters for several years across a range of projects. They have built the critical elements of our system and have always delivered a strong return on investment. Moreover, they are a pleasure to work with — always enthusiastic, professional and with a positive culture. I would, and have, recommended them to others in need of flexible development capacity.</p>
+	            		<div class="client">
+	            			<span class="client_name">Todd Quinto</span>
+	            			<span class="client_position"> - CEO at Endave Software</span>
+	            		</div>
+	            	</div>
+            	</div>
+            <!-- </div> -->
         </div>
     </section>
 
