section services done

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,51 @@
             <!-- </div> -->
         </div>
     </section>
-
+	<section class="services">
+		<div class="container container--services">
+			<h2 class="title  title--services">Our Services</h2>
+			<div class="text">
+				<p class="text-services">
+					We’ll do everything we can to grow your revenue. Our motivation is to drive your business further that you can imagine.
+				</p>
+			</div>
+			<div class="services__item">
+				<div class="services__item_icon">
+					<img src="img/journal-icon.png" alt="">
+				</div>
+				<h3 class="services__item_heading">Copywriting Material</h3>
+				<p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks.</p>
+			</div>
+			<div class="services__item">
+				<div class="services__item_icon">
+					<img src="img/journal-icon.png" alt="">
+				</div>
+				<h3 class="services__item_heading">Copywriting Material</h3>
+				<p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks.</p>
+			</div>
+			<div class="services__item">
+				<div class="services__item_icon">
+					<img src="img/journal-icon.png" alt="">
+				</div>
+				<h3 class="services__item_heading">Copywriting Material</h3>
+				<p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks.</p>
+			</div>
+			<div class="services__item">
+				<div class="services__item_icon">
+					<img src="img/journal-icon.png" alt="">
+				</div>
+				<h3 class="services__item_heading">Copywriting Material</h3>
+				<p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks.</p>
+			</div>
+			<div class="services__item">
+				<div class="services__item_icon">
+					<img src="img/journal-icon.png" alt="">
+				</div>
+				<h3 class="services__item_heading">Copywriting Material</h3>
+				<p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks.</p>
+			</div>
+		</div>
+	</section>
 
 </body>
 </html>
