section portfolio done

--- a/src/index.html
+++ b/src/index.html
@@ -84,6 +84,7 @@
             <!-- </div> -->
         </div>
     </section>
+
 	<section class="services">
 		<div class="container container--services">
 			<h2 class="title  title--services">Our Services</h2>
@@ -129,6 +130,37 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="portfolio">
+		<div class="container container--portfolio">
+			<h2 class="title  title--portfolio">Our Portfolio</h2>
+			<div class="text">
+				<p class="text-portfolio">
+					We’ll do everything we can to grow your revenue. Our motivation is to drive your business further that you can imagine.
+				</p>
+			</div>
+			<div class="portfolio-box">
+				<div class="portfolio__item">
+					<div class="portfolio__item-img">
+						<img src="./img/portfolio-img.png" alt="">
+					</div>
+					<div class="portfolio__item-info">
+						<div class="portfolio__item-info_icon">
+							<img src="./img/icon-portfolio.png" alt="">
+						</div>
+						<div class="portfolio__item-info_heading">LandingZap App</div>
+						<p class="text portfolio__item-info_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+						<div class="portfolio__item-info_skills">
+							<div class="skills">UI</div>
+							<div class="skills">UX</div>
+							<div class="skills">MOBILE APP</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 
 </body>
 </html>
