making footer and sliders

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -32,13 +33,11 @@
                         <a class="nav-menu__link" href="#">CONTACT</a>
                     </li>
                 </ul>
-                <!-- SVG + absolute -->
                 <div class="nav-logo">
                     <a class="nav-logo__link" href="#">
                         <img src="./img/logo.png" class="nav-logo__img" alt="">
                     </a>
                 </div>
-                <!-- BTN class -->
                 <div class="nav-btn">
                     <a class="btn--nav" href="#">REQUEST A QUOTE</a>
                 </div>
@@ -68,9 +67,9 @@
             <div class="btn">
                 <a href="#" class="btn btn--about">Claim your free consultation</a>
             </div>
-
-            <!-- <div class="about-slider"> -->
-            	<div class="quotes"><img src="img/quotes.png" alt=""></div>
+			<div class="quotes"><img src="img/quotes.png" alt=""></div>
+            <div class="about-slider">
+            	<!-- 1 -->
             	<div class="about__client">
 	            	<div class="about__client_info">
 	            		<img class="client_photo" src="img/client.jpg" alt="">
@@ -81,7 +80,32 @@
 	            		</div>
 	            	</div>
             	</div>
-            <!-- </div> -->
+            	<!-- 1 -->
+            	<!-- 2
+            	<div class="about__client">
+            		            	<div class="about__client_info">
+            		            		<img class="client_photo" src="img/client.jpg" alt="">
+            		            		<p class="text">We have worked with Digital Crafters for several years across a range of projects. They have built the critical elements of our system and have always delivered a strong return on investment. Moreover, they are a pleasure to work with — always enthusiastic, professional and with a positive culture. I would, and have, recommended them to others in need of flexible development capacity.</p>
+            		            		<div class="client">
+            		            			<span class="client_name">Todd Quinto</span>
+            		            			<span class="client_position"> - CEO at Endave Software</span>
+            		            		</div>
+            		            	</div>
+            	</div>
+            	2
+            	3
+            	<div class="about__client">
+            		            	<div class="about__client_info">
+            		            		<img class="client_photo" src="img/client.jpg" alt="">
+            		            		<p class="text">We have worked with Digital Crafters for several years across a range of projects. They have built the critical elements of our system and have always delivered a strong return on investment. Moreover, they are a pleasure to work with — always enthusiastic, professional and with a positive culture. I would, and have, recommended them to others in need of flexible development capacity.</p>
+            		            		<div class="client">
+            		            			<span class="client_name">Todd Quinto</span>
+            		            			<span class="client_position"> - CEO at Endave Software</span>
+            		            		</div>
+            		            	</div>
+            	</div>
+            	3 -->
+            </div>
         </div>
     </section>
 
@@ -161,6 +185,34 @@
 		</div>
 	</section>
 
+	<footer class="contact">
+		<div class="container container--contact">
+			<h2 class="title  title--contact">Contact us today to learn how we increase your revenue.</h2>
+			<div class="contact-form">
+				<div class="form-field">
+					<span class="form-field__icon">
+						<img src="./img/contact-icon.png" alt="">
+					</span>
+					<input type="text" class="form-control" placeholder="Your name">
+				</div>
+				<div class="form-field">
+					<span class="form-field__icon">
+						<img src="./img/contact-mail.png" alt="">
+					</span>
+					<input type="email" class="form-control" placeholder="Email">
+				</div>
+				<div class="form-field">
+					<span class="form-field__icon">
+						<img src="./img/contact-question.png" alt="">
+					</span>
+					<textarea class="form-control form-control_texted" placeholder="How we can help you?"></textarea>
+				</div>
+				<div class="btn">
+                	<a href="#" class="btn btn--about">Claim your free consultation</a>
+            </div>
+			</div>
+		</div>
+	</footer>
 
 </body>
 </html>
