--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css" />
+    <link rel="stylesheet" type="text/css" href="libs/slick-carousel/slick/slick.css">
     <!-- Move to css END -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
@@ -70,8 +70,9 @@
                 <a href="#" class="btn btn--about">Claim your free consultation</a>
             </div>
 			<div class="quotes"><img src="img/quotes.png" alt=""></div>
+			
             <div class="about-slider">
-            	<!-- 1 -->
+
             	<div class="about__client">
 	            	<div class="about__client_info">
 	            		<img class="client_photo" src="img/client.jpg" alt="">
@@ -82,32 +83,30 @@
 	            		</div>
 	            	</div>
             	</div>
-            	<!-- 1 -->
-            	<!-- 2
+
             	<div class="about__client">
-            		            	<div class="about__client_info">
-            		            		<img class="client_photo" src="img/client.jpg" alt="">
-            		            		<p class="text">We have worked with Digital Crafters for several years across a range of projects. They have built the critical elements of our system and have always delivered a strong return on investment. Moreover, they are a pleasure to work with — always enthusiastic, professional and with a positive culture. I would, and have, recommended them to others in need of flexible development capacity.</p>
-            		            		<div class="client">
-            		            			<span class="client_name">Todd Quinto</span>
-            		            			<span class="client_position"> - CEO at Endave Software</span>
-            		            		</div>
-            		            	</div>
+            		<div class="about__client_info">
+            		    <img class="client_photo" src="#" alt="">
+            		    <p class="text">We have worked with Digital Crafters for several years across a range of projects. They have built the critical elements of our system and have always delivered a strong return on investment. Moreover, they are a pleasure to work with — always enthusiastic, professional and with a positive culture. I would, and have, recommended them to others in need of flexible development capacity.</p>
+            		    <div class="client">
+            		        <span class="client_name">Sashka</span>
+            		        <span class="client_position"> - CEO at Endave Software</span>
+            		    </div>
+            		</div>
             	</div>
-            	2
-            	3
+
             	<div class="about__client">
-            		            	<div class="about__client_info">
-            		            		<img class="client_photo" src="img/client.jpg" alt="">
-            		            		<p class="text">We have worked with Digital Crafters for several years across a range of projects. They have built the critical elements of our system and have always delivered a strong return on investment. Moreover, they are a pleasure to work with — always enthusiastic, professional and with a positive culture. I would, and have, recommended them to others in need of flexible development capacity.</p>
-            		            		<div class="client">
-            		            			<span class="client_name">Todd Quinto</span>
-            		            			<span class="client_position"> - CEO at Endave Software</span>
-            		            		</div>
-            		            	</div>
+            		<div class="about__client_info">
+            		    <img class="client_photo" src="#" alt="">
+            		    <p class="text">We have worked with Digital Crafters for several years across a range of projects. They have built the critical elements of our system and have always delivered a strong return on investment. Moreover, they are a pleasure to work with — always enthusiastic, professional and with a positive culture. I would, and have, recommended them to others in need of flexible development capacity.</p>
+            		    <div class="client">
+            		        <span class="client_name">Deniska</span>
+            		        <span class="client_position"> - CEO at Endave Software</span>
+            		    </div>
+            		</div>
             	</div>
-            	3 -->
             </div>
+            <div class="about-slider__buttons"></div>
         </div>
     </section>
 
@@ -128,30 +127,30 @@
 			</div>
 			<div class="services__item">
 				<div class="services__item_icon">
-					<img src="img/journal-icon.png" alt="">
+					<img src="img/home-page-icon.png" alt="">
 				</div>
-				<h3 class="services__item_heading">Copywriting Material</h3>
+				<h3 class="services__item_heading">Landing Page Design</h3>
 				<p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks.</p>
 			</div>
 			<div class="services__item">
 				<div class="services__item_icon">
-					<img src="img/journal-icon.png" alt="">
+					<img src="img/megaphone-icon.png" alt="">
 				</div>
-				<h3 class="services__item_heading">Copywriting Material</h3>
+				<h3 class="services__item_heading">Full Marketing Design</h3>
 				<p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks.</p>
 			</div>
 			<div class="services__item">
 				<div class="services__item_icon">
-					<img src="img/journal-icon.png" alt="">
+					<img src="img/browser-window-icon.png" alt="">
 				</div>
-				<h3 class="services__item_heading">Copywriting Material</h3>
+				<h3 class="services__item_heading">Website Development</h3>
 				<p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks.</p>
 			</div>
 			<div class="services__item">
 				<div class="services__item_icon">
-					<img src="img/journal-icon.png" alt="">
+					<img src="img/bookmark-icon.png" alt="">
 				</div>
-				<h3 class="services__item_heading">Copywriting Material</h3>
+				<h3 class="services__item_heading">Marketing Materials</h3>
 				<p class="services__item_text">Or worse, you’ve heard horror stories about programmers, web designers and writers who sprint out of the starting blocks.</p>
 			</div>
 		</div>
@@ -165,25 +164,48 @@
 					We’ll do everything we can to grow your revenue. Our motivation is to drive your business further that you can imagine.
 				</p>
 			</div>
-			<div class="portfolio-box">
-				<div class="portfolio__item">
-					<div class="portfolio__item-img">
-						<img src="./img/portfolio-img.png" alt="">
-					</div>
-					<div class="portfolio__item-info">
-						<div class="portfolio__item-info_icon">
-							<img src="./img/icon-portfolio.png" alt="">
+			
+				<div class="portfolio-box">
+					<div class="portfolio-slider">
+						<div class="portfolio__item">
+							<div class="portfolio__item-img">
+								<img src="./img/portfolio-img.png" alt="">
+							</div>
+							<div class="portfolio__item-info">
+								<div class="portfolio__item-info_icon">
+									<img src="./img/icon-portfolio.png" alt="">
+								</div>
+								<div class="portfolio__item-info_heading">LandingZap App</div>
+								<p class="text portfolio__item-info_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+								<div class="portfolio__item-info_skills">
+									<div class="skills">UI</div>
+									<div class="skills">UX</div>
+									<div class="skills">MOBILE APP</div>
+								</div>
+							</div>
 						</div>
-						<div class="portfolio__item-info_heading">LandingZap App</div>
-						<p class="text portfolio__item-info_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
-						<div class="portfolio__item-info_skills">
-							<div class="skills">UI</div>
-							<div class="skills">UX</div>
-							<div class="skills">MOBILE APP</div>
+
+						<div class="portfolio__item">
+							<div class="portfolio__item-img">
+								<img src="./img/portfolio-img.png" alt="">
+							</div>
+							<div class="portfolio__item-info">
+								<div class="portfolio__item-info_icon">
+									<img src="./img/icon-portfolio.png" alt="">
+								</div>
+								<div class="portfolio__item-info_heading">LandingZap App 2</div>
+								<p class="text portfolio__item-info_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+								<div class="portfolio__item-info_skills">
+									<div class="skills">UI</div>
+									<div class="skills">UX</div>
+									<div class="skills">MOBILE APP</div>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>
-			</div>
+					<div class="portfolio-slider__buttons"></div>
+				</div>	
+
 		</div>
 	</section>
 
@@ -210,11 +232,14 @@
 					<textarea class="form-control form-control_texted" placeholder="How we can help you?"></textarea>
 				</div>
 				<div class="btn">
-                	<a href="#" class="btn btn--about">Claim your free consultation</a>
-            </div>
+                	<a href="#" class="btn btn--contact">Claim your free consultation</a>
+            	</div>
 			</div>
 		</div>
 	</footer>
+
+<script type="text/javascript" src="js/libs.min.js"></script>
+<script type="text/javascript" src="js/custom.js"></script>
 
 </body>
 </html>
