--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="libs/slick-carousel/slick/slick.css">
+    <!-- <link rel="stylesheet" type="text/css" href="libs/slick-carousel/slick/slick-theme.css"/> -->
     <!-- Move to css END -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
