--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DigitalCrafters</title>
     <!-- Move to css START -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,600,600i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="libs/slick-carousel/slick/slick.css">
-    <!-- <link rel="stylesheet" type="text/css" href="libs/slick-carousel/slick/slick-theme.css"/> -->
     <!-- Move to css END -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
